--- a/requirements.txt
+++ b/requirements.txt
@@ -9,3 +9,6 @@ gunicorn==21.2.0
 supabase==2.0.2
 python-dotenv==1.0.0
 flask-cors==4.0.0
+bcrypt==4.0.1
+flask-limiter==3.5.0
+flask-jwt-extended==4.5.3
